<resources>
    <string name="app_provider_description">Provider of demactor to access data</string>
    <string name="app_provider_name">Provider of demactor</string>
    <string name="client_adress_invalid_field_error">Field Adress is invalid.</string>
    <string name="client_adress_label">Adress</string>
    <string name="client_empty_list">Client list is empty !</string>
    <string name="client_error_create">Client creation errorâ€¦</string>
    <string name="client_error_edit">Client edition errorâ€¦</string>
    <string name="client_not_found">No Client found to displayâ€¦</string>
    <string name="client_progress_load_message">Client is loadingâ€¦</string>
    <string name="client_progress_load_relations_message">Client related entities are loading...</string>
    <string name="client_progress_load_relations_title">Client related entities loading</string>
    <string name="client_progress_load_title">Client Loading progress</string>
    <string name="client_progress_save_message">Client is saving to databaseâ€¦</string>
    <string name="client_progress_save_title">Client save progress</string>
    <string name="comment_content_invalid_field_error">Field Content is invalid.</string>
    <string name="comment_content_label">Content</string>
    <string name="comment_createdat_date_title">Select createdAt date</string>
    <string name="comment_createdat_invalid_field_error">Field CreatedAt is invalid.</string>
    <string name="comment_createdat_label">CreatedAt</string>
    <string name="comment_createdat_time_title">Select createdAt time</string>
    <string name="comment_empty_list">Comment list is empty !</string>
    <string name="comment_error_create">Comment creation errorâ€¦</string>
    <string name="comment_error_edit">Comment edition errorâ€¦</string>
    <string name="comment_groups_dialog_title">Select groups</string>
    <string name="comment_groups_invalid_field_error">Field Groups is invalid.</string>
    <string name="comment_groups_label">Groups</string>
    <string name="comment_id_invalid_field_error">Field Id is invalid.</string>
    <string name="comment_id_label">Id</string>
    <string name="comment_not_found">No Comment found to displayâ€¦</string>
    <string name="comment_owner_dialog_title">Select owner</string>
    <string name="comment_owner_invalid_field_error">Field Owner is invalid.</string>
    <string name="comment_owner_label">Owner</string>
    <string name="comment_post_dialog_title">Select post</string>
    <string name="comment_post_invalid_field_error">Field Post is invalid.</string>
    <string name="comment_post_label">Post</string>
    <string name="comment_progress_load_message">Comment is loadingâ€¦</string>
    <string name="comment_progress_load_relations_message">Comment related entities are loading...</string>
    <string name="comment_progress_load_relations_title">Comment related entities loading</string>
    <string name="comment_progress_load_title">Comment Loading progress</string>
    <string name="comment_progress_save_message">Comment is saving to databaseâ€¦</string>
    <string name="comment_progress_save_title">Comment save progress</string>
    <string name="comment_validate_label">Validate</string>
    <string name="common_create">Create</string>
    <string name="common_delete">Del</string>
    <string name="common_edit">Edit</string>
    <string name="common_network_error">Connection error</string>
    <string name="dialog_delete_message">Are you sure you want to delete this item ?</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="group_comments_dialog_title">Select comments</string>
    <string name="group_comments_invalid_field_error">Field Comments is invalid.</string>
    <string name="group_comments_label">Comments</string>
    <string name="group_empty_list">Group list is empty !</string>
    <string name="group_error_create">Group creation errorâ€¦</string>
    <string name="group_error_edit">Group edition errorâ€¦</string>
    <string name="group_id_invalid_field_error">Field Id is invalid.</string>
    <string name="group_id_label">Id</string>
    <string name="group_name_invalid_field_error">Field Name is invalid.</string>
    <string name="group_name_label">Name</string>
    <string name="group_not_found">No Group found to displayâ€¦</string>
    <string name="group_progress_load_message">Group is loadingâ€¦</string>
    <string name="group_progress_load_relations_message">Group related entities are loading...</string>
    <string name="group_progress_load_relations_title">Group related entities loading</string>
    <string name="group_progress_load_title">Group Loading progress</string>
    <string name="group_progress_save_message">Group is saving to databaseâ€¦</string>
    <string name="group_progress_save_title">Group save progress</string>
    <string name="grouptocomment_displayname_invalid_field_error">Field DisplayName is invalid.</string>
    <string name="grouptocomment_displayname_label">DisplayName</string>
    <string name="grouptocomment_empty_list">GroupToComment list is empty !</string>
    <string name="grouptocomment_error_create">GroupToComment creation errorâ€¦</string>
    <string name="grouptocomment_error_edit">GroupToComment edition errorâ€¦</string>
    <string name="grouptocomment_group_dialog_title">Select group</string>
    <string name="grouptocomment_group_invalid_field_error">Field Group is invalid.</string>
    <string name="grouptocomment_group_label">Group</string>
    <string name="grouptocomment_id_invalid_field_error">Field Id is invalid.</string>
    <string name="grouptocomment_id_label">Id</string>
    <string name="grouptocomment_not_found">No GroupToComment found to displayâ€¦</string>
    <string name="grouptocomment_progress_load_message">GroupToComment is loadingâ€¦</string>
    <string name="grouptocomment_progress_load_relations_message">GroupToComment related entities are loading...</string>
    <string name="grouptocomment_progress_load_relations_title">GroupToComment related entities loading</string>
    <string name="grouptocomment_progress_load_title">GroupToComment Loading progress</string>
    <string name="grouptocomment_progress_save_message">GroupToComment is saving to databaseâ€¦</string>
    <string name="grouptocomment_progress_save_title">GroupToComment save progress</string>
    <string name="hiddenentity_content_invalid_field_error">Field Content is invalid.</string>
    <string name="hiddenentity_content_label">Content</string>
    <string name="hiddenentity_empty_list">HiddenEntity list is empty !</string>
    <string name="hiddenentity_error_create">HiddenEntity creation errorâ€¦</string>
    <string name="hiddenentity_error_edit">HiddenEntity edition errorâ€¦</string>
    <string name="hiddenentity_id_invalid_field_error">Field Id is invalid.</string>
    <string name="hiddenentity_id_label">Id</string>
    <string name="hiddenentity_not_found">No HiddenEntity found to displayâ€¦</string>
    <string name="hiddenentity_progress_load_message">HiddenEntity is loadingâ€¦</string>
    <string name="hiddenentity_progress_load_title">HiddenEntity Loading progress</string>
    <string name="hiddenentity_progress_save_message">HiddenEntity is saving to databaseâ€¦</string>
    <string name="hiddenentity_progress_save_title">HiddenEntity save progress</string>
    <string name="image_error_null">Image is null</string>
    <string name="menu_item_create">Add</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_save">Save</string>
    <string name="jockey_dfdfgdddfgdfg_invalid_field_error">Field DfdfgdDDfgdfg is invalid.</string>
    <string name="jockey_dfdfgdddfgdfg_label">DfdfgdDDfgdfg</string>
    <string name="jockey_dfgdfgdfgdffg_invalid_field_error">Field DfgdfgdfgdfFg is invalid.</string>
    <string name="jockey_dfgdfgdfgdffg_label">DfgdfgdfgdfFg</string>
    <string name="jockey_dzerzerbcze_dialog_title">Select dzerzerBCze</string>
    <string name="jockey_dzerzerbcze_invalid_field_error">Field DzerzerBCze is invalid.</string>
    <string name="jockey_dzerzerbcze_label">DzerzerBCze</string>
    <string name="jockey_empty_list">Jockey list is empty !</string>
    <string name="jockey_error_create">Jockey creation errorâ€¦</string>
    <string name="jockey_error_edit">Jockey edition errorâ€¦</string>
    <string name="jockey_iuytrezba_dialog_title">Select iuytrezBa</string>
    <string name="jockey_iuytrezba_invalid_field_error">Field IuytrezBa is invalid.</string>
    <string name="jockey_iuytrezba_label">IuytrezBa</string>
    <string name="jockey_not_found">No Jockey found to displayâ€¦</string>
    <string name="jockey_progress_load_message">Jockey is loadingâ€¦</string>
    <string name="jockey_progress_load_relations_message">Jockey related entities are loading...</string>
    <string name="jockey_progress_load_relations_title">Jockey related entities loading</string>
    <string name="jockey_progress_load_title">Jockey Loading progress</string>
    <string name="jockey_progress_save_message">Jockey is saving to databaseâ€¦</string>
    <string name="jockey_progress_save_title">Jockey save progress</string>
    <string name="no_network_error">No internet connection available</string>
    <string name="poney_empty_list">Poney list is empty !</string>
    <string name="poney_error_create">Poney creation errorâ€¦</string>
    <string name="poney_error_edit">Poney edition errorâ€¦</string>
    <string name="poney_iomaiome1_invalid_field_error">Field IomAiome1 is invalid.</string>
    <string name="poney_iomaiome1_label">IomAiome1</string>
    <string name="poney_jockgfhjeys1_dialog_title">Select jockgFhjeys1</string>
    <string name="poney_jockgfhjeys1_invalid_field_error">Field JockgFhjeys1 is invalid.</string>
    <string name="poney_jockgfhjeys1_label">JockgFhjeys1</string>
    <string name="poney_not_found">No Poney found to displayâ€¦</string>
    <string name="post_comments_label">Comments</string>
    <string name="post_content_label">Content</string>
    <string name="post_createdat_date_title">Select createdAt date</string>
    <string name="post_createdat_label">CreatedAt</string>
    <string name="post_createdat_time_title">Select createdAt time</string>
    <string name="post_expiresat_date_title">Select expiresAt date</string>
    <string name="post_expiresat_label">ExpiresAt</string>
    <string name="post_expiresat_time_title">Select expiresAt time</string>
    <string name="post_groups_label">Groups</string>
    <string name="post_owner_label">Owner</string>
    <string name="post_title_label">Title</string>
    <string name="post_updatedat_date_title">Select updatedAt date</string>
    <string name="post_updatedat_label">UpdatedAt</string>
    <string name="post_updatedat_time_title">Select updatedAt time</string>
    <string name="user_birthdate_date_title">Select birthdate date</string>
    <string name="user_birthdate_label">Birthdate</string>
    <string name="user_createdat_date_title">Select createdAt date</string>
    <string name="user_createdat_label">CreatedAt</string>
    <string name="user_createdat_time_title">Select createdAt time</string>
    <string name="user_firstname_label">Firstname</string>
    <string name="user_friends_label">Friends</string>
    <string name="user_lastname_label">Lastname</string>
    <string name="user_login_label">Login</string>
    <string name="user_password_label">Password</string>
    <string name="user_title_label">Title</string>
    <string name="user_usergroup_label">UserGroup</string>
    <string name="usergroup_deletepermission_label">DeletePermission</string>
    <string name="usergroup_id_label">Id</string>
    <string name="usergroup_name_label">Name</string>
    <string name="usergroup_not_found">No UserGroup found to displayâ€¦</string>
    <string name="usergroup_writepermission_label">WritePermission</string>
</resources>