<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <RelativeLayout
            android:id="@+id/usergroup_data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" >
            <TextView
                android:id="@+id/usergroup_id_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usergroup_id_label"/>
            <TextView
                android:id="@+id/usergroup_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/usergroup_id_label" />
            <TextView
                android:id="@+id/usergroup_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usergroup_id"
                android:text="@string/usergroup_name_label"/>
            <TextView
                android:id="@+id/usergroup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/usergroup_name_label" />
            <TextView
                android:id="@+id/usergroup_writepermission_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usergroup_name"
                android:text="@string/usergroup_writepermission_label"/>
            <CheckBox
                android:id="@+id/usergroup_writepermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usergroup_writepermission_label" />
            <TextView
                android:id="@+id/usergroup_deletepermission_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usergroup_writepermission"
                android:text="@string/usergroup_deletepermission_label"/>
            <CheckBox
                android:id="@+id/usergroup_deletepermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usergroup_deletepermission_label" />
        </RelativeLayout>
    </ScrollView>
    <TextView
        android:id="@+id/usergroup_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/usergroup_not_found" />
</RelativeLayout>
